# JST-PIT-analysis

./: README.md  analysis.ipynb  new_analysis.ipynb  workingpackage.py
my-library/: README.rst  setup.cfg
my-library/brad_pit_lib.egg-info/: top_level.txt
mylibrary/: README.rst  setup.cfg
mylibrary/brad_pit_lib.egg-info/: PKG-INFO  SOURCES.txt
mylibrary/bradpitlib/: __init__.py  graph.py  income.py  params.py  people.py
