[metadata]
name = bradpitlib
version = 0.0.1
author = Magdalena Rajtor
author_email = m.rajtor@student.uw.edu.pl
description = Package for NYPD project
long_description = file: README.rst
url = https://github.com/MagdaRajtor/NYPD-project
license = BSD-3-Clause

[options]
packages = find:
python_requires = >=3.6